--- a/_config.yml
+++ b/_config.yml
@@ -24,13 +24,13 @@ repository               : "academicpages/academicpages.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  name             : "Nasir Yasin"
   pronouns         : # example: "she/her"  
   bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  location         : "Norfolk, USA"
+  employer         : "Old Dominion University"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "nyasin@odu.edu" 
 
   # Academic websites
   academia         : # URL
