Restore navigation entries for Publications and Conferences
Restored 'Publications' and 'Conference and Seminars' entries in navigation.

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,24 +8,26 @@
 #      Markdown formatted page while the second is generated using JSON.
 
 main:
-  - title: "Publications"
-    url: /publications/
-    url: https://scholar.google.com/citations?user=SXnHNu0AAAAJ
-
-  - title: "Conference and Seminars"
-    url: /Conference and Seminars/    
-
+  
   - title: "Teaching"
     url: /teaching/    
     
-  - title: "Portfolio"
-    url: /portfolio/
+    
+  #- title: "Portfolio"
+   # url: /portfolio/
         
   #- title: "Blog Posts"
 #    url: /year-archive/
     
   - title: "CV"
     url: /cv/
+
+  - title: "Publications"
+    url: /publications/
+    url: https://scholar.google.com/citations?user=SXnHNu0AAAAJ
+    
+  - title: "Conference and Seminars"
+    url: /Conference and Seminars/  
     
   # - title: "CV"
   #   url: /cv-json/
