Fix URL path for Talks in navigation
Corrected URL path for Talks section to lowercase.

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -27,7 +27,7 @@ main:
     url: https://scholar.google.com/citations?user=SXnHNu0AAAAJ
     
   - title: "Talks"
-    url: /Talks/  
+    url: /talks/  
     
   # - title: "CV"
   #   url: /cv-json/
